# piper1-gpl

./: .dockerignore  .gitignore  .projectile  CHANGELOG.md  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  README_STTS.md  TRAINING.md  build_monotonic_align.sh  espeak_ng.i  mypy.ini  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml  wheels.yml
docker/: entrypoint.sh
docs/: ALIGNMENTS.md  API_HTTP.md  API_PYTHON.md  BUILDING.md  CLI.md  PLANS.md  TRAINING.md  VOICES.md
libpiper/: .gitignore  CMakeLists.txt  README.md
libpiper/include/: piper.h  piper_impl.hpp
libpiper/src/: piper.cpp
piper/: download_voices.py  espeak_ng.py  http_server.py  phonemize_espeak.py
script/: dev_build  download_voices  export  format  lint  package  run  run_http_server  setup  train
src/piper/: __init__.py  __main__.py  audio_playback.py  config.py  const.py  espeakbridge.c  espeakbridge.pyi  http_server.py  phoneme_ids.py  phonemize_espeak.py  voice.py
src/piper/tashkeel/: LICENSE  SOURCE
src/piper/train/: export_onnx.py
src/piper/train/vits/: dataset.py  lightning.py  utils.py
tests/: test_piper.py  test_voice.onnx  test_voice.onnx.json
