[build-system]
requires = ["scikit-build-core", "swig"]
build-backend = "scikit_build_core.build"

[project]
name = "piper"
version = "1.3.0"
description = "TODO"
requires-python = ">=3.9"
dependencies = [
    "onnxruntime==1.21.0"
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.1.1",
    "mypy==1.14.0",
    "pylint==3.2.7",
    "pytest==8.3.4",
    "build==1.2.2",
]
http = [
    "flask==3.1.0"
]

[tool.scikit-build]
wheel.packages = ["piper"]
cmake.version = ">=3.18"
build-dir = "build"
