[build-system]
requires = ["scikit-build-core", "swig"]
build-backend = "scikit_build_core.build"

[project]
name = "piper"
version = "1.3.0"
description = "Fast and local neural text-to-speech engine"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["home", "assistant", "tts", "text-to-speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "onnxruntime=>1,<2"
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.1.1",
    "mypy==1.14.0",
    "pylint==3.2.7",
    "pytest==8.3.4",
    "build==1.2.2",
]
http = [
    "flask>=3,<4"
]

[tool.scikit-build]
wheel.packages = ["piper"]
cmake.version = ">=3.18"
build-dir = "build"
